feat: made page catalog

--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -1,53 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="catalog.css" />
     <title>Catalog</title>
-</head>
-<header class="header">
-  <div class="hamburger-menu">
-    <input id="menu__toggle" type="checkbox" />
-    <label class="menu__btn" for="menu__toggle">
-      <span></span>
-    </label>
-    <ul class="menu__box">
-      <li><a class="menu__item" href="#shop">Shop</a></li>
-      <li><a class="menu__item" href="#howItWorks">How it works?</a></li>
-      <li><a class="menu__item" href="#whoIsTarla">Who is Tarla?</a></li>
-    </ul>
-  </div>
-  <img src="..\Images\Frame.png" alt="logo" />
-  <ul class="navigation">
-    <li class="li"><a class="link" href="#shop"> Shop</a></li>
-    <li class="li"><a class="link" href="#howItWorks">How it works?</a></li>
-    <li class="li"><a class="link" href="#whoIsTarla">Who is Tarla?</a></li>
-  </ul>
-
-  <button class="switcher">
-    <img src="..\Images\Day-Night.png" alt="Rectangle.png" />
-  </button>
-  <div class="logIn">
-    <img src="..\Images\Person.svg" alt="Rectangle.png" />
-    <p>Log in</p>
-  </div>
-</header>
-<body>
-    
-</body>
- <footer class="footer">
-    <div class="icon">
-      <img src="..\Images\phone.png" alt="Telephone">
-      <img src="..\Images\github.png" alt="Github">
-      <img src="..\Images\e-mail.png" alt="E-mail">
+  </head>
+  <header class="header">
+    <div class="hamburger-menu">
+      <input id="menu__toggle" type="checkbox" />
+      <label class="menu__btn" for="menu__toggle">
+        <span></span>
+      </label>
+      <ul class="menu__box">
+        <li><a class="menu__item" href="#catalog">Catalog</a></li>
+        <li><a class="menu__item" href="#delivery">Delivery</a></li>
+      </ul>
     </div>
-<div class="divfooter" > 
-  <a class="link" href="..\Tarla\index.html">Tarla</a>
-  <a class="link" href="..\Tarla\index.html">How to use</a>
-  <a class="link" href="..\Tarla\aboutUs.html">ьь</a>
-  <a class="link" href="..\Tarla\aboutUs.html">ьь</a>
-</div>
-  </footer> 
+    <a href="..\Tarla\index.html"
+      ><img src="..\Images\Frame.png" alt="logo"
+    /></a>
+
+    <ul class="navigation">
+      <li class="li"><a class="link" href="#catalog">Catalog</a></li>
+      <li class="li"><a class="link" href="#delivery">Delivery</a></li>
+    </ul>
+
+    <button class="switcher">
+      <img src="..\Images\Day-Night.png" alt="Rectangle.png" />
+    </button>
+    <div class="logIn">
+      <img src="..\Images\Person.svg" alt="Rectangle.png" />
+      <p>Log in</p>
+    </div>
+  </header>
+  <body class="body">
+    <section class="section">
+      <div class="card">
+        <img id="catalog" src="..\Images\3-1.png" alt="" />
+        <div class="divLeftYoRight baseText">
+          <h2 class="mainText">All-Butter Croissant</h2>
+          <p>
+            an all-butter croissant is a classic French pastry renowned for its
+            flaky, buttery layers and delicate texture. Its golden exterior
+            hides a soft, airy interior, creating a perfect balance of crispness
+            and tenderness with every bite. This iconic pastry has a rich aroma
+            that fills the air, enticing the senses with its irresistible
+            allure.
+          </p>
+          <h3 class="mainText">Composition</h3>
+          <p>flour, butter, water, milk, sugar, salt, yeast</p>
+          <h3 class="mainText">Price: kit of 6 - £12</h3>
+        </div>
+      </div>
+      <div class="card">
+        <div class="divLeftYoRight baseText">
+          <h2 class="mainText">Almond Croissant</h2>
+          <p>
+            An almond croissant is a delectable pastry that starts with the same
+            flaky, buttery layers as a traditional croissant but is then filled
+            with a sweet almond paste or frangipane filling. Once baked, it's
+            topped with a generous sprinkling of sliced almonds, adding a
+            delightful crunch and nutty flavor to every bite. T
+          </p>
+          <h3 class="mainText">Composition</h3>
+          <p>
+            flour, butter, water, milk, sugar, salt, yeast, almonds (whole or
+            sliced), almond extract (optional)
+          </p>
+          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+        </div>
+        <img src="..\Images\3-2.png" alt="" />
+      </div>
+      <div class="card">
+        <img src="..\Images\3-3.png" alt="" />
+        <div class="divLeftYoRight baseText">
+          <h2 class="mainText">Raspberry Danish</h2>
+          <p>
+            A raspberry Danish is a delightful pastry that features a tender,
+            flaky dough base, typically shaped into an oval or rectangular form.
+            The dough is then filled with a luscious raspberry compote or jam,
+            which adds a burst of sweet-tart flavor. Sometimes, a creamy cheese
+            filling, such as cream cheese or almond paste, is layered beneath
+            the raspberries, adding richness and depth to the pastry. After
+            baking, the raspberry Danish is often drizzled with a sweet glaze or
+            dusted with powdered sugar, enhancing its visual appeal and adding a
+            touch of extra sweetness.
+          </p>
+          <h3 class="mainText">Composition</h3>
+          <p>
+            flour, butter, sugar, salt, yeast, eggs, milk, raspberry compote or
+            jam, cream cheese or almond paste (optional), powdered sugar (for
+            dusting, optional)
+          </p>
+          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+        </div>
+      </div>
+      <div class="card">
+        <div class="divLeftYoRight baseText">
+          <h2 class="mainText">Pain Aux Raisins</h2>
+          <p>
+            Pain aux raisins, also known as "raisin Danish" or "raisin swirl,"
+            is a delectable French pastry that showcases layers of buttery,
+            flaky dough wrapped around a sweet filling of pastry cream and plump
+            raisins. The dough is typically rolled out thinly, spread with
+            pastry cream, and sprinkled with raisins before being rolled into a
+            spiral shape. After baking, the pain aux raisins emerges from the
+            oven with a golden-brown crust and a tantalizing aroma that hints at
+            its indulgent interior. Often, a light glaze or dusting of powdered
+            sugar is added to enhance its sweetness and visual appeal.
+          </p>
+          <h3 class="mainText">Composition</h3>
+          <p>
+            flour, butter, sugar, salt, yeast, eggs, milk, pastry cream,
+            raisins, powdered sugar (for dusting, optional)
+          </p>
+          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+        </div>
+        <img src="..\Images\3-4.png" alt="" />
+      </div>
+      <div class="card">
+        <img src="..\Images\3-5.png" alt="" />
+        <div div class="divLeftYoRight baseText">
+          <h2 class="mainText">Apricot Danish</h2>
+          <p>
+            An apricot Danish is a delightful pastry that combines tender, flaky
+            layers of dough with a sweet and tangy apricot filling. The dough is
+            typically shaped into a square or rectangular form and then filled
+            with apricot jam or compote, which lends a burst of fruity flavor to
+            every bite. Sometimes, a layer of creamy cheese, such as cream
+            cheese or almond paste, is spread beneath the apricot filling,
+            adding richness and depth to the pastry. After baking, the apricot
+            Danish is often adorned with a light glaze or dusting of powdered
+            sugar, enhancing its sweetness and visual appeal.
+          </p>
+          <h3 class="mainText">Composition</h3>
+          <p>
+            flour, butter, sugar, salt, yeast, eggs, milk, apricot jam or
+            compote, cream cheese or almond paste (optional), powdered sugar
+            (for dusting, optional)
+          </p>
+          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+        </div>
+      </div>
+      <div class="card">
+        <div div class="divLeftYoRight baseText">
+          <h2 class="mainText">Pain Au Chocolat</h2>
+          <p>
+            Pain au chocolat, also known as a chocolate croissant, is a
+            delectable pastry that combines the buttery, flaky layers of a
+            croissant with rich, indulgent chocolate filling. The pastry dough
+            is rolled out thinly and then filled with bars or squares of
+            high-quality dark chocolate. The dough is then folded over the
+            chocolate, creating multiple layers of pastry enveloping the
+            chocolate filling. After baking, the pain au chocolat emerges from
+            the oven with a golden-brown exterior and a melty, chocolatey
+            interior. The combination of crispy, buttery layers and decadent
+            chocolate makes it a beloved treat for breakfast or any time of the
+            day.
+          </p>
+          <h3 class="mainText">Composition</h3>
+          <p>flour, butter, water, milk, sugar, salt, yeast, dark chocolate</p>
+          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+        </div>
+        <img src="..\Images\3-6.png" alt="" />
+      </div>
+    </section>
+    <img src="..\Images\fone.jpg" alt="" />
+
+    <section class="delivery baseText">
+      <div id="delivery" class="divDelivery">
+        <p class="mainText">Self-Pickup</p>
+        <ul>
+          <li>
+            You can pick up your order at our store located at: 10 Lenin Street.
+          </li>
+          <li>
+            Self-pickup hours: from 9:00 AM to 6:00 PM, Monday to Saturday.
+          </li>
+          <li>Please call us in advance to confirm your order is ready.</li>
+        </ul>
+      </div>
+      <div class="divDelivery">
+        <p class="mainText">Pickup Point</p>
+        <ul>
+          <li>You can pick up your order at any of our pickup points.</li>
+          <li>
+            Pickup points are located at: 5 Pushkin Street; 20 Sadovaya Street.
+          </li>
+          <li>
+            Pickup points hours: from 10:00 AM to 8:00 PM, seven days a week.
+          </li>
+        </ul>
+      </div>
+      <div class="divDelivery">
+        <p class="mainText">Courier Delivery</p>
+        <ul>
+          <li>Courier delivery is available within the city.</li>
+          <li>Delivery hours: from 12:00 PM to 9:00 PM, Monday to Saturday.</li>
+          <li>The delivery cost is 300 rubles.</li>
+        </ul>
+      </div>
+    </section>
+  </body>
+  <footer class="footer">
+    <div class="icon">
+      <a href=""><img src="..\Images\phone.png" alt="Telephone" /></a>
+      <a href=""><img src="..\Images\github.png" alt="Github" /></a>      
+      <a href=""><img src="..\Images\e-mail.png" alt="E-mail" /></a>
+    </div>
+    <div class="divfooter">
+      <a class="link" href="..\Tarla\index.html">Tarla</a>
+      <a class="link" href="..\Tarla\index.html">How to use</a>
+      <a class="link" href="..\Tarla\aboutUs.html">Legend</a>
+      <a class="link" href="..\Tarla\aboutUs.html">Privacy Policy</a>
+    </div>
+  </footer>
 </html>
