--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -52,7 +52,7 @@
           every time. We’ve done the tricky bits so all you need to do is roll,
           proof and bake!
         </p>
-        <button class="button1">Shop pastry kits</button>
+        <button class="button1"><a href="..\Tarla\catalog.html">Shop pastry kits</a></button>
       </div>
       <div class="swiper mySwiper img1">
         <div class="swiper-wrapper">
@@ -114,7 +114,7 @@
           </p>
         </div>
       </div>
-      <button class="button2">Shop pastry kits</button>
+      <button class="button2"><a href="..\Tarla\catalog.html">Read more</a></button>
     </section>
     <section class="section3">
       <img class="img3" src="..\Images\img3.png" alt="" />
@@ -124,7 +124,7 @@
           pastries on your plates, and never needing to get out of your PJs.
         </p>
         <img class="img3UnVisible" src="..\Images\img3.png" alt="" />
-        <button class="button2">Shop pastry kits</button>
+        <button class="button2"><a href="..\Tarla\catalog.html">Shop pastry kits</a></button>
       </div>
     </section>
     <section id="shop" class="section4">
@@ -134,40 +134,39 @@
           <img src="..\Images\3-1.png" alt="" />
           <p class="p4_2">All-Butter Croissant</p>
           <p class="p4_3">Kit of 6 - £12</p>
-          <button class="button4">Add to cart</button>
+          <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
         <div>
           <img src="..\Images\3-2.png" alt="" />
           <p class="p4_2">Almond Croissant</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
-          <button class="button4">Add to cart</button>
+          <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
         <div>
           <img src="..\Images\3-3.png" alt="" />
           <p class="p4_2">Raspberry Danish</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
-          <button class="button4">Add to cart</button>
+          <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
         <div class="visible4">
           <img src="..\Images\3-4.png" alt="" />
           <p class="p4_2">Pain Aux Raisins</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
-          <button class="button4">Add to cart</button>
+          <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
         <div class="visible5">
           <img src="..\Images\3-5.png" alt="" />
           <p class="p4_2">Apricot Danish</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
-          <button class="button4">Add to cart</button>
+          <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
         <div class="visible6">
           <img src="..\Images\3-6.png" alt="" />
           <p class="p4_2">Pain Au Chocolat</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
-          <button class="button4">Add to cart</button>
+          <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
       </div>
-      <button class="button4unvisible">Load more</button>
     </section>
     <section class="section5">
       <img src="..\Images\section5.png" alt="" />
