fix: change footer for NotAuthorized

--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -157,36 +157,17 @@
     </section>
   </body>
   <footer class="footer">
-    <img src="..\Images\Frame.png" alt="logo" />
-    <div class="PF">
-      <p class="Hf">Account</p>
-      <p>Sign Up</p>
-      <p>Log In</p>
+    <div class="icon">
+      <img src="..\Images\phone.png" alt="Telephone">
+      <img src="..\Images\github.png" alt="Github">
+      <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
-    <div class="PF">
-      <p class="Hf" id="howItWorks">Our company</p>
-      <ul>
-        <li><a href="..\NotAuthorized\location.html">Location</a></li>
-        <li><a href="..\Tarla\aboutUs.html">Our story</a></li>
-        <li> <a href="..\NotAuthorized\WhoIsTarta.html">Who is Tarla?</a></li>
-      </ul>
-      </div>
-    <div class="PF">
-      <p class="Hf">Resources</p>
-      <ul>
-        <li><a href="..\Tarla\aboutUs.html">FAQ</a></li>
-        <li><a href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a></li>
-        <li><a href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a></li>
-      </ul>    
-     </div>
-    <div class="PF">
-      <p class="Hf">Contacts</p>     
-      <p>telephone</p>
-      <p>Github</p>
-      <p>E-mail</p>
-    </div>
-  </div>
-    <script src="..\Tarla\swaper.js"></script>
-  </footer>
-  
+<div class="divfooter" > 
+  <a class="link" href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
+  <a class="link" href="..\NotAuthorized\location.html">Location</a>
+  <a class="link" href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
+  <a class="link" href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
+</div>
+<script src="..\Tarla\swaper.js"></script>
+  </footer>  
 </html>
