feat: made adaptive main authorized page

--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -26,7 +26,7 @@
         <li><a class="menu__item" href="#whoIsTarla">Who is Tarla?</a></li>
       </ul>
     </div>
-    <img src="..\Images\Frame.png" alt="logo" />
+    <img class="logo" src="..\Images\Frame.png" alt="logo" />
     <ul class="navigation">
       <li class="li"><a class="link" href="#shop"> Shop</a></li>
       <li class="li"><a class="link" href="#howItWorks">How it works?</a></li>
@@ -131,37 +131,37 @@
       <p class="H4">Shop pastry kits</p>
       <div class="div4">
         <div>
-          <img src="..\Images\3-1.png" alt="" />
+          <img class="img4" src="..\Images\3-1.png" alt="" />
           <p class="p4_2">All-Butter Croissant</p>
           <p class="p4_3">Kit of 6 - £12</p>
           <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
         <div>
-          <img src="..\Images\3-2.png" alt="" />
+          <img class="img4" src="..\Images\3-2.png" alt="" />
           <p class="p4_2">Almond Croissant</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
           <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
         <div>
-          <img src="..\Images\3-3.png" alt="" />
+          <img class="img4" src="..\Images\3-3.png" alt="" />
           <p class="p4_2">Raspberry Danish</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
           <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
-        <div class="visible4">
-          <img src="..\Images\3-4.png" alt="" />
+        <div class="visible">
+          <img class="img4" src="..\Images\3-4.png" alt="" />
           <p class="p4_2">Pain Aux Raisins</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
           <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
-        <div class="visible5">
-          <img src="..\Images\3-5.png" alt="" />
+        <div class="visible">
+          <img class="img4" src="..\Images\3-5.png" alt="" />
           <p class="p4_2">Apricot Danish</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
           <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
         </div>
-        <div class="visible6">
-          <img src="..\Images\3-6.png" alt="" />
+        <div class="visible">
+          <img class="img4" src="..\Images\3-6.png" alt="" />
           <p class="p4_2">Pain Au Chocolat</p>
           <p class="p4_3">Kit of 6 - £13.50</p>
           <button class="button4"><a href="..\Tarla\catalog.html">Information</a></button>
@@ -213,7 +213,7 @@
   <footer class="footer">
     <div class="icon">
       <img src="..\Images\phone.png" alt="Telephone">
-      <img src="..\Images\github.png" alt="Github">
+      <a href="https://github.com/MaltSun/TarlaProgect"><img src="..\Images\github.png" alt="Github"/></a>
       <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
 <div class="divfooter" > 
