feat: add link for GitHub

--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -207,7 +207,7 @@
   <footer class="footer">
     <div class="icon">
       <a href=""><img src="..\Images\phone.png" alt="Telephone" /></a>
-      <a href=""><img src="..\Images\github.png" alt="Github" /></a>      
+      <a href="https://github.com/MaltSun/TarlaProgect"><img src="..\Images\github.png" alt="Github"/></a>
       <a href=""><img src="..\Images\e-mail.png" alt="E-mail" /></a>
     </div>
     <div class="divfooter">
