--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -194,7 +194,7 @@
   <footer class="footer">
     <div class="icon">
       <img src="..\Images\phone.png" alt="Telephone">
-      <img src="..\Images\github.png" alt="Github">
+      <a href="https://github.com/MaltSun/TarlaProgect"><img src="..\Images\github.png" alt="Github"/></a>
       <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
 <div class="divfooter" > 
